--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/11/96</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 young men)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>hit by train near Ventimiglia (IT) while trying to walk to France along railroad tracks</b><br>Source: IRR<br>
+Found dead: <b>14/11/04</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>blown up in minefield in Evros (GR) while trying to cross Turkish-Greek border</b><br>Source: ORF/NOB<br>
 
 <br>
 
