--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/10/04</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found near Tarfaya (MA)</b><br>Source: APDHA/MUGAK/AFVIC/DPA<br>
+Found dead: <b>14/07/08</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>3 drowned after boat capsized near Lampedusa (IT); 25 missing</b><br>Source: NOB/ItalyMAG/VK<br>
 
 <br>
 
