--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/10/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>stowaway, fell from truck as it boarded ferry in port of the Spanish enclave of Melilla (ES) to mainland Spain</b><br>Source: Público/IOM<br>
+Found dead: <b>03/01/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>died of hypothermia after crossing the Evros River from Turkey to Greece</b><br>Source: Independent<br>
 
 <br>
 
