--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/05/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Alabamou Mamah (30)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>jumped into Main River in Würzburg (DE) after asylum application was rejected</b><br>Source: ARI/ FR<br>
+Found dead: <b>28/08/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned during rescue operation off coast of Birzebbuga (MT) travelling from Africa</b><br>Source: Gara/MUGAK/NOB<br>
 
 <br>
 
