--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border guards at unspecified location while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
+Found dead: <b>23/01/03</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>stowaways, fell out of airplane wheel bay in China after boarding the wrong plane in France</b><br>Source: MNS<br>
 
 <br>
 
