--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/02/17</b><br>Number of person: <b>101</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>80 drowned in shipwreck near Zawiya (LY), bodies and boat washed ashore; 21 missing</b><br>Source: VK<br>
+Found dead: <b>27/02/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, ±16)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned trying to cross border from Benzu (MA) to Spanish enclave of Ceuta (ES), body found hours later</b><br>Source: Faro/FE/DiarioVasco<br>
 
 <br>
 
