--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/02/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, ±16)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned trying to cross border from Benzu (MA) to Spanish enclave of Ceuta (ES), body found hours later</b><br>Source: Faro/FE/DiarioVasco<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found in harbour near village of Behramkale, Ayvacik (TR)</b><br>Source: Imkander<br>
 
 <br>
 
