--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/11/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Kone Watara (man, 26)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died in hospital in the Spanish enclave of Ceuta (ES) after boat travelling from Morocco was rescued</b><br>Source: APDHA<br>
+Found dead: <b>26/02/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abiyou Tilaye (man, 37)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>suicide, in detention centre in Würzburg (DE)</b><br>Source: taz/SZ/AN/ESG/ProAsyl/ZAG<br>
 
 <br>
 
