--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/09/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Vasiliy Todchuk (man, 24)</b><br>Region of origin: <b>Russia</b><br>Cause of death: <b>suicide, hanged himself at building site in Govan, Glasgow (GB)</b><br>Source: NCADC/IRR<br>
+Found dead: <b>22/12/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Predrag Molnar (man, 40)</b><br>Region of origin: <b>Serbia</b><br>Cause of death: <b>presumed suicide in police cell in Amsterdam (NL), had been badly bitten by police dog in possible wrongful arrest</b><br>Source: Vrijheid<br>
 
 <br>
 
