--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/09/00</b><br>Number of person: <b>9</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>reportedly drowned near Cape Spartel (MA)</b><br>Source: EP<br>
+Found dead: <b>15/10/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 27)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly pregnant, died from exhaustion in the hold of vessel travelling from Turkey to Italy</b><br>Source: Reu.<br>
 
 <br>
 
