--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/12/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Georgia</b><br>Cause of death: <b>drowned after ship capsized near Evros (GR); 20 survivors</b><br>Source: IntHeraldTribune/NOB<br>
+Found dead: <b>10/02/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mr Dvorzac (man, 84)</b><br>Region of origin: <b>Canada (Slovenian origin)</b><br>Cause of death: <b>heart attack in hospital after being detained in Harmondsworth removal centre (GB) while suffering from dementia</b><br>Source: Independent/GuardianUn./BBC<br>
 
 <br>
 
