--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/11/08</b><br>Number of person: <b>21</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in shipwreck near Mayotte (FR)</b><br>Source: N24/AFP/NOB<br>
+Found dead: <b>18/02/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Frederick Ofosu (man, 33)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>suicide, strangled with electric cable on building site in Qawra (MT), his last asylum claim was rejected</b><br>Source: TimesM<br>
 
 <br>
 
