--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/05/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead in Sabratha (LY)</b><br>Source: IOM<br>
+Found dead: <b>Aug 04</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found dead near Zelid (LY)</b><br>Source: LR<br>
 
 <br>
 
