--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1997</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>M'Bicha</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>suffocated with a pillow at Brussels Airport (BE) during expulsion procedure</b><br>Source: Público<br>
+Found dead: <b>Aug 04</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (1 woman; 4 men)</b><br>Region of origin: <b>Sudan, Ghana</b><br>Cause of death: <b>drowned after dinghy capsized on way from Libya to Italy</b><br>Source: Servir<br>
 
 <br>
 
