--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/06/12</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing, reportedly drowned, when small boat sailing from North Africa capsized off coast of Leuca (IT)</b><br>Source: PICUM/LRB/FE/Infomob<br>
+Found dead: <b>Sep 02</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>drowned, abandoned near Greek coast in boat that later capsized</b><br>Source: IRR<br>
 
 <br>
 
