--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/06/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jonathan Sizalina (man, 20)</b><br>Region of origin: <b>Ecuador</b><br>Cause of death: <b>reported suicide in Barcelona (ES) police cell after arrest for being "illegal", possibly beaten to death</b><br>Source: EP/AVUI/MUGAK<br>
+Found dead: <b>19/11/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Palestine</b><br>Cause of death: <b>1 drowned when boat capsized off coast of Izmir (TR) on way to Greece; 2 missing</b><br>Source: IntHeraldTribune/KI/FE/NOB<br>
 
 <br>
 
