--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/02/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Sultan Dogan (21)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>suicide, owing to poor conditions in asylum centre near Albbruck (DE)</b><br>Source: SAGA/ARI<br>
+Found dead: <b>15/02/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Arman Palani (boy, 17)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>killed with knife in fight at Dale asylum centre in Sandnes (NO)</b><br>Source: NRK<br>
 
 <br>
 
