--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/08/94</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>froze to death near Swedish refugee camp after police delayed their search</b><br>Source: Svenska Dagbladet/MNS<br>
+Found dead: <b>15/10/04</b><br>Number of person: <b>28</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>bodies found near Tarfaya (MA)</b><br>Source: APDHA/MUGAK/AFVIC/DPA<br>
 
 <br>
 
