--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/03/18</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (7 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>presumed drowned, unspecified location in the Strait of Gibraltar between Morocco and Spain</b><br>Source: Caminando/IOM<br>
+Found dead: <b>10/06/02</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>disappeared after boat sank near Antigua in Canary Islands (ES)</b><br>Source: MNS<br>
 
 <br>
 
