--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/08/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Guinea</b><br>Cause of death: <b>died of dehydration in desert near Tamanrasset (DZ), with 12 others trying to reach Europe</b><br>Source: AFP/FocusNews/AllWAfrica<br>
+Found dead: <b>28/10/07</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (7 men)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>drowned after boat travelling from Egypt capsized, found off Roccella Ionica coast, Calabria (IT)</b><br>Source: MNS/PICUM/LESP/jW/LR/MUGAK/AVUI<br>
 
 <br>
 
