--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/04/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Asia</b><br>Cause of death: <b>jumped from boat into sea to avoid Spanish Guardia Civil (ES)</b><br>Source: MC<br>
+Found dead: <b>11/07/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned in the Neisse River near Zentendorf (DE) while reportedly trying to cross Polish-German border</b><br>Source: German Government<br>
 
 <br>
 
