--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/11/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lula (woman, 28)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died of illness in Libya before leaving on boat for Italy; had been pregnant from rape and aborted at late stage</b><br>Source: IOM/MSF/Proactiva/UNHCR<br>
+Found dead: <b>22/08/14</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N. (5 young children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after overcrowded boat capsized off Garibouli (LY); 19 survived</b><br>Source: UNHCR/AP/MNS<br>
 
 <br>
 
