--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/02/06</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (6 pregnant women)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat from Comoros (KM) sank on way to Mayotte (FR) where they wanted to give birth</b><br>Source: Mayotte sans frontières<br>
+Found dead: <b>05/08/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>found by police officer on Caleta del Mero beach (ES)</b><br>Source: TS/APDHA<br>
 
 <br>
 
