--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/08/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>found by police officer on Caleta del Mero beach (ES)</b><br>Source: TS/APDHA<br>
+Found dead: <b>31/12/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Salko L. (man, 39)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>suicide, hanged himself in psychiatric wing of detention centre in Tegel (DE)</b><br>Source: CARF/ARI/ZAG<br>
 
 <br>
 
