--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/12/97</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Salko L. (man, 39)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>suicide, hanged himself in psychiatric wing of detention centre in Tegel (DE)</b><br>Source: CARF/ARI/ZAG<br>
+Found dead: <b>25/10/12</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat sank near coast of Morocco while travelling to Spain; 17 rescued</b><br>Source: EP/Aljazeera/MaltaToday<br>
 
 <br>
 
