--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/10/12</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat sank near coast of Morocco while travelling to Spain; 17 rescued</b><br>Source: EP/Aljazeera/MaltaToday<br>
+Found dead: <b>18/03/11</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men, ±28)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies found in Petalo near the Evros River (GR)</b><br>Source: ClandestinE<br>
 
 <br>
 
