--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/03/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>reportedly drowned trying to cross the Morava River on Slovakian-Austrian border while travelling to Austria</b><br>Source: Salzburger Nachrichten<br>
+Found dead: <b>Oct 08</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies discovered by Turkish and Greek authorities in the Aegean Sea</b><br>Source: PICUM/NOB<br>
 
 <br>
 
