--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bogdan Rajka (man, 40)</b><br>Region of origin: <b>Poland</b><br>Cause of death: <b>homeless migrant, died after empty carriage he slept in at Naples (IT) train station caught fire</b><br>Source: IRR<br>
+Found dead: <b>21/02/06</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat from Anjouan (KM) sank on its way to Mayotte (FR); 6 missing</b><br>Source: Mayotte sans frontières<br>
 
 <br>
 
