--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/02/06</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after boat from Anjouan (KM) sank on its way to Mayotte (FR); 6 missing</b><br>Source: Mayotte sans frontières<br>
+Found dead: <b>10/04/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in prison near Misrata (LY) after 16 days in the Mediterranean Sea, SOS ignored by NATO</b><br>Source: GuardianUn./MUGAK/ELM/VDG/Raz/ABC/AVUI/VK<br>
 
 <br>
 
