--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/04/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned after boat capsized on way from Turkey to Greece; 3 rescued</b><br>Source: DN<br>
+Found dead: <b>14/01/17</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (1 woman; 2 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing in area of Nador (MA)</b><br>Source: SofiaGlobe<br>
 
 <br>
 
